--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/174063.pt">VisitBritain anuncia parceria com Rock in Rio</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/224623.es-419">Concurso &ldquo;Inauguración Testino&rdquo; en Argentina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/britain-to-extend-assistance-to-combat-ebola-in-west-africa">Britain to extend assistance to combat Ebola in West Africa</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/200799.fr">Accord avec EDF : un moment important pour nos deux pays</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-british-embassy-in-havana-has-a-vacancy--2">Job opportunities at the British Embassy in Havana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/173244.lt">Lietuva perėmė Europos Sąjungos vairą</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220750.zh-tw">英國氣候變遷特別代表來台訪問</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/197760.ar">السفير البريطاني في لبنان: آمل أن يغير حزب الله اتجاهه عن مصالح إيران والأسد</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/234925.pt">Câmara de Comércio Britânica promove seminário em São Paulo</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--5">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-islands-cabinet-update-and-actions--4">Turks and Caicos Islands Cabinet update and actions</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/214930.pt">UKTI promove competição de Tecnologia e Inovação no Brasil</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/210097.fr">George Osborne prononce le discours d&#39;automne</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/283719.es-419">Fiscal de la Nación recibió al Crown Prosecution Service</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--20">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/261846.pt">Parques tecnológicos e incubadoras em Florianópolis</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-honorary-consul-appointed-in-the-bahamas">New honorary consul appointed in the Bahamas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263029.pt">Banco Central e Reino Unido assinam acordo de cooperação</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/271980.es-419">Resumen de la Visita Real del Príncipe de Gales y la Duquesa de Cornwall a México</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
