--- a/apps/mapit/importing-data.html
+++ b/apps/mapit/importing-data.html
@@ -365,7 +365,7 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/mapit/commit/f326a6068aa64eaa818cc5c5dcd16945fc9111db">29 Apr 2021</a>
+  Last updated: <a href="https://github.com/alphagov/mapit/commit/d5fa20841b442a6e2acf0a85b094ad84033384f3">10 May 2021</a>
 </div>
 
   <h1 class="page-title">mapit: MapIt - import postcode and boundary data</h1>
@@ -432,9 +432,7 @@ the database for importing data.</li>
 <ol>
 <li>
 <strong>ONS Postcode Database</strong> - ONSPD releases can be found via the Office
-for National Statistics (ONS) at
-<a href="http://geoportal.statistics.gov.uk/datasets?q=ONS+Postcode+Directory+(ONSPD)&amp;sort_by=name&amp;sort_order=asc">http://geoportal.statistics.gov.uk/datasets?q=ONS+Postcode+Directory+(ONSPD)&amp;sort_by=name&amp;sort_order=asc</a>
-or via
+for National Statistics (ONS) by going to
 <a href="http://geoportal.statistics.gov.uk/">http://geoportal.statistics.gov.uk/</a> and selecting the latest ONSPD
 from the Postcodes product drop down.</li>
 <li>
